<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:background="@color/lightPink"
    tools:context=".activities.AddWordActivity">

    <Button
        android:id="@+id/btn_backToMain"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn_backToMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp"
        >

    <EditText
        android:id="@+id/et_category"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Catégorie"
        android:maxLength="12"
        android:padding="8dp"/>

        <Button
            android:id="@+id/btn_addCategory"
            android:layout_width="200dp"
            android:backgroundTint="@color/btn_bg"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_category" />

        <EditText
            android:id="@+id/et_newWord1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Mot"
            android:maxLength="12"
            android:inputType="textPersonName"
            android:padding="8dp" />

        <EditText
            android:id="@+id/et_newWord2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Mot"
            android:maxLength="12"
            android:inputType="textPersonName"
            android:padding="8dp" />
        <Button
            android:id="@+id/btn_addWordField"
            android:layout_width="200dp"
            android:backgroundTint="@color/btn_bg"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_field" />

        <Button
            android:id="@+id/btn_addWord"
            android:layout_width="200dp"
            android:backgroundTint="@color/btn_bg"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_newWords" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>